fixing overflow issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,7 @@ body {
   margin: 0 auto;
   overflow: auto;
   height: 100%;
+  overscroll-behavior: none;
   -webkit-overflow-scrolling: auto;
 }
 /*   HEADER*/
